# work

cursach/: CMakeLists.txt  air.h  boots.cpp  boots.h  broomstick.cpp  broomstick.h  camel is fast.cpp  camel is fast.h  camel.cpp  camel.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  earth.h  earthair.cpp  earthair.h  magic carpet.cpp  magic carpet.h  main.cpp  race.cpp  race.h  racing_simulator.cpp
